fixed z-index for about section

--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -2,7 +2,7 @@
 	margin-top: 935px;
 	padding: 200px 0 100px;
 	position: relative;
-	z-index: 5;
+	z-index: 1;
 
 	&__container {
 		display: flex;
